2004-11-25  Jeff Law  <law@redhat.com>

	* timevar.def (TV_TREE_LOOP_INIT, TV_TREE_LOOP_FINI): New timevars.
	* tree-ssa-loop.c (pass_loop_init): Use TV_TREE_LOOP_INIT.
	(pass_loop_done): Use TV_TREE_LOOP_FINI.

2004-11-26  Alan Modra  <amodra@bigpond.net.au>

	PR rtl-optimization/16356
	* config/rs6000/rs6000.md (floatdisf2_internal2): Rewrite with
	separate output register and one less jump.  Enable for powerpc64.
	(floatdisf2): Adjust for above.

2004-11-25  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa.h (STARTFILE_SPEC): Add crt0.
	(GCC_DRIVER_HOST_INITIALIZATION): Define.

2004-11-25  Andrew Pinski  <pinskia@physics.uc.edu>

	PR middle-end/17957
	* tree-complex.c (vector_inner_type): New variable moved from
	build_word_mode_vector_type.
	(vector_last_type): Likewise.
	(vector_last_nunits): Likewise.
	(build_word_mode_vector_type): Use the new variables.
	* Makefile.in (tree-complex.o): Add gt-tree-complex.h $(GGC_H).
	(GTFILES): Add tree-complex.c.
	(gt-tree-complex.h): New rule, add it to the rest of the gt-* rules.

2004-11-25  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa.h (TARGET_CPU_CPP_BUILTINS): Define
	__XTENSA_WINDOWED_ABI__.

2004-11-25  Richard Henderson  <rth@redhat.com>

	* dwarf2out.c (dwarf2out_stack_adjust): Add after_p argument.  Save
	args_size adjustments for calls even with cfa as stack pointer.
	Search calls for stack adjustments after the insn is issued.
	(dwarf2out_frame_debug): Add after_p argument; pass it on.
	* dwarf2out.h (dwarf2out_frame_debug): Update to match.
	* final.c (final_start_function, final_scan_insn): Likewise.

2004-11-25  Richard Henderson  <rth@redhat.com>

	PR c++/6764
	* reload1.c (set_initial_eh_label_offset): New.
	(set_initial_label_offsets): Use it.

2004-11-25  Kaz Kojima  <kkojima@gcc.gnu.org>

	* config/sh/sh.c (sh_output_mi_thunk): Initialize bitmap obstacks
	before calling life_analysis and release them after.

2004-11-25  Kazu Hirata  <kazu@cs.umass.edu>
