@@ -1,3 +1,8 @@
+2004-11-26  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* cfgrtl.c (try_redirect_by_replacing_jump): Speed up the
+	check that tests if all edges go to the same destination.
+
 2004-11-25  Jeff Law  <law@redhat.com>
 
 	* timevar.def (TV_TREE_LOOP_INIT, TV_TREE_LOOP_FINI): New timevars.
